2007-10-17  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/igraph.h (igraph_i_adjlist_t, igraph_adjlist_t)
	(igraph_i_adjedgelist_t, igraph_adjedgelist_t) : no longer internal, 
	renamed

	* src/random.c (igraph_rbinom) : replace unif_rand with RNG_UNIF01 and 
	fmin2 with fmin

	* src/forestfire.c (igraph_forest_fire_game) : progress meter and 
	interruption handler added

	* src/structural_properties.c (igraph_path_length_hist) : progress
	meter added

2007-10-16  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/cliques.c (igraph_i_find_k_cliques) : memory
	usage reduced, should solve issue #47

2007-10-16  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/foreign.c (igraph_read_graph_dimacs) : updated to handle 'edge'
	problems

	* src/forestfire.c (igraph_forest_fire_game) : updated according to a
	paper i found on Leskovec's web site

	* src/forestfire.c (igraph_forest_fire_game) : forest fire model added

	* src/random.h (RNG_BINOM) : added
	* src/random.c (igraph_rbinom) : added

2007-10-15  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structural_properties.c (igraph_path_length_hist) : added

	* src/structure_generators.c (igraph_full_citation) : added

2007-10-13  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/revolver_ml_cit.c (igraph_revolver_ml_D, igraph_revolver_ml_D_alpha)
	(igraph_revolver_ml_D_alpha_a, igraph_revolver_d) : add interruption

	* src/revolver_ml_cit.c (igraph_revolver_ml_AD)
	(igraph_revolver_ml_AD_alpha_a_beta) : added

	* src/revolver_ml_cit.c (igraph_revolver_ml_D) : remove 'ptk', not needed

	* src/revolver_ml_cit.c (igraph_revolver_ml_D, igraph_revolver_ml_D_alpha)
	(igraph_revolver_ml_D_alpha_a) : add fncount, grcount arguments	
	
	* src/bfgs.c (igraph_bfgs) : add interruption, change int* arguments
	to igraph_integer_t*	

	* src/matrix.c : add boolean matrices

2007-10-12  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/revolver_ml_cit.c (igraph_revolver_ml_D)
	(igraph_revolver_ml_D_alpha, igraph_revolver_ml_D_alpha_a) : added,
	rewritten